# survivorpy

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: survivorpy-tests.yml  survivorpy-upload.yml
data_pipeline/: data_last_updated.json  process_metadata.R  process_tables.R  run_pipeline.R  survivor_data_pipeline.R
data_pipeline/metadata/: data_last_updated.json
infrastructure/: index.py  main.tf  outputs.tf  provider.tf  terraform.tfvars  variables.tf
infrastructure/lambda/: index.py
scripts/: convert_survivor_to_parquet.R  fetch_survivor_data.R
scripts/R/: convert_survivor_to_parquet.R
survivorpy/: __init__.py  config.py  core.py  data.py  data_store.py  sync.py  table_names.py
survivorpy/_cache/: table_names.json
tests/: test_core.py  test_data.py  test_data_pipeline.py  test_init.py  test_sync.py  test_table_names.py
